mikec/tests/PASS/escapechars/2.mc
void main(){
    char z = '\0';
}
