mikec/tests/FAIL/assign/23.mc
/* Assign char value without quotes */
void main()
{
	char a = a;
}